fix: Add back overflow: hidden to prevent scrolling

--- a/assets/sass/contentNavigation.scss
+++ b/assets/sass/contentNavigation.scss
@@ -168,3 +168,7 @@
   inset: 0;
   z-index: 3;
 }
+
+body:has(.overlay--show) {
+  overflow: hidden;
+}
